--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.3",
