--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^3.6.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-loader-spinner": "^6.1.6",
