--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.18.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "modern-normalize": "^2.0.0",
